# blazing_SEARCH

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  amp  build-and-run.sh  claude-md-review-prompt-blazing-search.md  debug_search.py  docker-compose.yml  find_babich.py  quickstart.md  rebuild_index.py  rebuild_inverted.rs  update-claude-md-local.ps1
src/: atomic_index_manager.rs  auto_indexer.rs  document_record.rs  docx_parser.rs  folder_processor.rs  inverted_index.rs  main.rs  search_engine.rs  stemmer.rs  web_server.rs
web/: app.js  auto-reload.js  index.html  nakaz.html  style.css
