[package]
name = "blazing_SEARCH"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = "0.36"
regex = "1.10"
zip = "0.6"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
actix-web = "4.8"
tokio = { version = "1.0", features = ["full"] }
mime_guess = "2.0.5"
chrono = { version = "0.4", features = ["serde"] }
fs4 = "0.9"
